<resources>
    <string name="app_name">Internal Project</string>
    <string name="splash_title">Clecotech International</string>

    <string name="ok">Okay</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_record_found">No record found</string>
    <string name="new_update_available">Please update your application with a new version available.</string>
    <string name="No_internet_connection">No internet connection</string>
    <string name="session_expire_msg">Your session expire. Please login again.</string>

    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_code">Please enter code</string>
    <string name="enter_verification_code">Enter Verification Code</string>

    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="tab3">Tab 3</string>
    <string name="tab4">Tab 4</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="dummy_data_msg">Lorem Ipsum is simply dummy text of the printing and typesetting industry 📓👰🍊 🍔🐆🔌. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book 🏆👵🐆.</string>

    <string name="create">Create Greetings</string>
    <string name="write_something">Write something</string>
    <string name="select_greeting">Select Greeting</string>
    <string name="select_friends">Select Friends</string>
    <string name="search">Search</string>

    <string name="select_filter_option">Select filter option</string>
    <string name="send">Sent</string>
    <string name="received">Received</string>
    <string name="username">Username</string>
    <string name="unique_reference">Unique Reference Id</string>
    <string name="department">Department</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="please_select_member">Please select member</string>
    <string name="please_select_greeting">Please select greeting</string>

</resources>