<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_5"
        app:cardCornerRadius="@dimen/margin_10"
        app:cardUseCompatPadding="true">

        <LinearLayout

            android:id="@+id/ll_theme_colour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minWidth="320dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/margin_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_close" />


            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_bold"
                android:text="@string/enter_verification_code"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/text_16" />
            <LinearLayout
                android:id="@+id/ll_enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_regular"
                    android:text="@string/code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />

                <EditText
                    android:id="@+id/edt_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/sf_regular"
                    android:hint="@string/enter_code"
                    android:paddingTop="10dp"
                    android:text=""
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/text_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_separator_color" />

            </LinearLayout>


            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_line_separator_view_height"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:padding="@dimen/padding_medium"
                    android:gravity="center"
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/selector_dialog_button"
                    android:fontFamily="@font/sf_semibold"
                    android:stateListAnimator="@null"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>