<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.bhagavad.hifivedemo.dashboard.setting.SettingFragmentViewModel" />

    </data>

    <LinearLayout

        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:descendantFocusability="beforeDescendants"
        android:fitsSystemWindows="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_large">

<LinearLayout
    android:gravity="center"
    android:onClick="@{()->viewModel.onCreateClick()}"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


        <TextView
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_bold"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_small"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text" />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/next"
        />

</LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/light_separator_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

               android:layout_weight="1"
                android:fontFamily="@font/sf_bold"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_small"
                android:text="@string/version"
                android:layout_gravity="center_vertical"

                android:textColor="@color/black"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:fontFamily="@font/sf_bold"
                android:gravity="end"
                android:padding="@dimen/margin_small"
                android:text="1.0.1"

                android:textColor="@color/black"
                android:textSize="@dimen/large_text" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/light_separator_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/margin_extra_extra_large"
            android:layout_marginEnd="20dp"
            android:background="@drawable/roundedbgwhitewithcurve">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/sf_semibold"
                android:gravity="center"
                android:padding="18dp"
                android:soundEffectsEnabled="true"
                android:text="@string/logout"
                android:onClick="@{()->viewModel.onLogoutClick()}"

                android:textAllCaps="false"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/extra_large_text" />
        </LinearLayout>

    </LinearLayout>

</layout>