<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.bhagavad.hifivedemo.dashboard.profile.ProfileFragmentViewModel" />

    </data>

    <LinearLayout

        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:descendantFocusability="beforeDescendants"
        android:fitsSystemWindows="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_large">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@color/white"
            android:gravity="center"
            android:onClick="@{()->viewModel.onCreateClick()}"
            android:scaleType="fitXY"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/sf_regular"
                android:text="@string/username"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text" />


            <TextView

                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_semibold"
                android:text="Ankit Goyal"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/light_separator_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/sf_regular"
                android:text="@string/unique_reference"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text" />


            <TextView

                android:id="@+id/tv_unique_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_semibold"
                android:text="Abc1234"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/light_separator_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/sf_regular"
                android:text="@string/department"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text" />


            <TextView

                android:id="@+id/tv_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_semibold"
                android:text="Web Designer"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/light_separator_color" />
        </LinearLayout>


    </LinearLayout>

</layout>